se agregó forEach

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <h1>Select the house you'd like to get a quote for:</h1>
     </main>
     <section id="container">
+        <div id="divHouses"></div>
         
     </section>
     
